tests/rosetta/out/Smalltalk/abundant-odd-numbers.out
/workspace/mochi/tests/rosetta/out/Smalltalk/abundant-odd-numbers.st:76: parse error, expected '|' or identifier
